--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,35 +4,35 @@ version: 0.0.1
 homepage:
 
 environment:
-  sdk: ">=2.16.2 <3.0.0"
-  flutter: ">=1.20.0"
+  sdk: ">=3.2.3"
+  flutter: ">=3.16.5"
 
 dependencies:
   flutter:
     sdk: flutter
 
   #  网络
-  dio: ^4.0.6
+  dio: ^5.4.0
   #  md5加密
-  crypto: ^3.0.1
+  crypto: ^3.0.3
   #  序列化
-  convert: ^3.0.1
+  convert: ^3.1.1
   #  数据本地化
-  shared_preferences: ^2.0.8
+  shared_preferences: ^2.2.2
   #  图片缓存
-  cached_network_image: ^3.2.1
+  cached_network_image: ^3.3.1
   #  状态管理
-  provider: ^6.0.1
+  provider: ^6.1.1
   #  电话,短信,浏览器,其他app
-  url_launcher: ^6.0.12
+  url_launcher: ^6.2.3
   #  日期格式化
-  date_format: ^2.0.4
+  date_format: ^2.0.7
   #  吐司提示
-  fluttertoast: ^8.0.9
+  fluttertoast: ^8.2.4
   #  尺寸适配
-  flutter_screenutil: ^5.1.0
+  flutter_screenutil: ^5.9.0
   # 上下拉刷新
-  pull_to_refresh: ^2.0.0
+  pull_to_refresh_flutter3: ^2.0.2
 
 dev_dependencies:
   flutter_test:
